@@ -1,7 +1,11 @@
-Git
+Git (for upcoming v0.2.0 release)
+
 * Updating to Rails3 API and idioms
+* Adding default table html options
+* Adding default lambda (table block) so that table_for can be called without passing a block
 
 v0.1.3 (Dec 28, 2009)
+
 * Changing destroy action to have confirmation by default
 
 v0.1.2 (Nov 25, 2009)
